--- a/lib/app_component.html
+++ b/lib/app_component.html
@@ -1,5 +1,16 @@
-<h1>ICFP Contest Forming Teams Locator</h1>
+<material-drawer persistent #drawer="drawer" [visible]="true" style="padding: 1em;">
+    <div class="simple_card" >
+        Stuff
+    </div>
+</material-drawer>
 
-<div #mapcanvas style="border: 1px solid black; width: 100%; height: 90%; background-color: cyan;">
+<material-content>
+    <div class="container" style="position: relative;">
 
-</div>
+        <h1>ICFP Contest Meeting Point</h1>
+
+        <div #mapcanvas style="border: 1px solid black; width: 100%; height: 800px; background-color: cyan;">
+
+        </div>
+    </div>
+</material-content>
