--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-index here
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Ts</title>
+  <base href="/">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+        rel="stylesheet">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMyEtTPRFyhxNAJQJpQXeWuACfyDRrcnU"></script>
+  <script src="https://cdn.klokantech.com/maptilerlayer/v1/index.js"></script>
+  <script>
+    function initMap2(map) {
+      var geoloccontrol = new klokantech.GeolocationControl(map, 13);
+      alert("btn added");
+    }
+
+  </script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="styles.b68554d3c1edbdad93e7.css"></head>
+<body>
+  <app-root></app-root>
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.2f4a59095805af02bd79.js"></script><script type="text/javascript" src="main.5d3600bf3251d35b878e.js"></script></body>
+</html>
