--- a/ts/src/index.html
+++ b/ts/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Ts</title>
+  <title>ICFP Contest - Meeting Point</title>
   <base href="/">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
@@ -10,8 +10,8 @@
   <script src="https://cdn.klokantech.com/maptilerlayer/v1/index.js"></script>
   <script>
     function initMap2(map) {
-      var geoloccontrol = new klokantech.GeolocationControl(map, 13);
-      alert("btn added");
+      //var geoloccontrol = new klokantech.GeolocationControl(map, 13);
+      //alert("btn added");
     }
 
   </script>
