--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Ts</title>
+  <title>ICFP Contest - Meeting Point</title>
   <base href="/">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
@@ -10,8 +10,8 @@
   <script src="https://cdn.klokantech.com/maptilerlayer/v1/index.js"></script>
   <script>
     function initMap2(map) {
-      var geoloccontrol = new klokantech.GeolocationControl(map, 13);
-      alert("btn added");
+      //var geoloccontrol = new klokantech.GeolocationControl(map, 13);
+      //alert("btn added");
     }
 
   </script>
@@ -20,5 +20,5 @@
 <link rel="stylesheet" href="styles.b68554d3c1edbdad93e7.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.2f4a59095805af02bd79.js"></script><script type="text/javascript" src="main.b0b7ad81bb502775c983.js"></script></body>
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.2f4a59095805af02bd79.js"></script><script type="text/javascript" src="main.4d6cd53fc2891fab7bac.js"></script></body>
 </html>
